# hackthon_platform_backend

./: .gitignore  Cargo.toml  README.md  build.sh  canister_ids.json  config-overrides.js  deploy.sh  dfx.json  dfx_with_assets.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
.metals/: metals.h2.db
src/hackthon_platform/: Cargo.toml  demo.sh
src/hackthon_platform/src/: README.md  hackthon_platform.did  lib.rs
src/hackthon_platform_assets/src/: App.css  App.js  App.jsx  asset-manifest.json  index.css  index.html  index.js  index.jsx  style.js
src/hackthon_platform_assets/src/component/: BraftEditor.jsx  Card.jsx  DataStateBox.jsx  Footer.jsx  Image.jsx  Loading.jsx  Nav.jsx  createHackathonUserID.js  footer.js  handleImg.js  nav.js
src/hackthon_platform_assets/src/component/hackathon/: AddHackathon.jsx  addHackathon.js  dialogAddHackathon.js  hackathon.css  hackathon.js  hackathon.jsx  hackathonBrief.js  hackathonDetails.js  hackathonDetails.jsx  hackathonInfo.js  hackathonList.js  hackathonList.jsx  joinhackathon.js  pageDetails.js  phase.js  swipper.js
src/hackthon_platform_assets/src/component/mine/: accountInfo.js  accountInfo.jsx  applyMessage.js  index.js  messageCenter.js  messageCenter.jsx  mine.css  mine.js  mine.jsx  mineTab.js  mineTab.jsx  mineTeam.js  mineTeam.jsx  tabControl.js
src/hackthon_platform_assets/src/component/team/: captain.js  captain.jsx  dialogAddProject.js  dialogAddProject.jsx  dialogJoinTeam.js  dialogJoinTeam.jsx  (+16 more)
src/hackthon_platform_assets/src/context/: user-context.jsx
src/motoko/src/: token.mo
(+8 files in other folders)
